# torrent-client

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: bitfield.rs  client.rs  handshake.rs  lib.rs  main.rs  message.rs  p2p.rs  peer.rs  peers.rs  piece.rs  torrent.rs  torrentfile.rs  tracker.rs
src/testdata/: archlinux-2019.12.01-x86_64.iso.torrent.golden.copy.json
tests/: parse-archlinux.rs  request-peers.rs
tests/testdata/: archlinux-2019.12.01-x86_64.iso.torrent.golden.json
