[package]
name = "torrent-client"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.0", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11"
sha1 = "0.10.6"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
serde_json = "1.0.149"
httpmock = "0.7"
