[package]
name = "torrent-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
sha1 = "0.10"
anyhow = "1.0"
url = "2"

[dev-dependencies]
serde_json = "1.0"
httpmock = "0.7"
